# swiftsupply

./: .gitignore  Makefile  pyproject.toml  requirements.txt  vercel.json
accounts/: forms.py
core/: __init__.py  admin.py  apps.py  forms.py  models.py  views.py
core/migrations/: 0001_initial.py  0002_delete_submission.py  0003_initial.py  0004_profile.py  0005_delete_profile.py  0006_post_video.py  0007_alter_post_video.py  0008_post_video_duration.py  0009_post_category.py  0010_remove_post_category_alter_post_title.py  0011_remove_post_title_alter_post_content.py  0012_alter_post_content.py  0013_userpostcount.py  0014_post_title.py  0015_remove_post_video_remove_post_video_duration_and_more.py  0016_product_remove_userpostcount_user_delete_post_and_more.py  0017_remove_product_name_alter_product_bar_code.py  0018_remove_product_bar_code_remove_product_cost_price_and_more.py  0019_product_status.py  0020_product_cost_product_date_added_product_price_and_more.py  0021_category_remove_product_date_added_product_category.py  0022_product_date_added.py  0023_product_last_modified.py  0024_incomestatement_product_quantity.py  0025_remove_incomestatement_operating_expenses_and_more.py  0026_category_profile_incomestatement_profile_and_more.py  0027_product_user.py  0028_category_user.py  0029_product_original_quantity_alter_category_name.py  0030_transaction.py  0031_product_unit_price.py  0032_sale_saleitem.py  0033_barcode.py  0035_initial.py  (+21 more)
submit/: admin.py  apps.py  backends.py  forms.py  managers.py  models.py  signals.py  urls.py  views.py
(+116 files in other folders)
